# llm_dojo

./: .gitignore  README.md  anspg.example.yaml  pyproject.toml
lean_project/: lake-manifest.json  lakefile.lean  lakefile_minimal.lean
lean_project/src/: ANSPG.lean  ANSPG_minimal.lean
src/: __init__.py  cli.py  config.py  game_config.py  models.py  rulebook.py
src/agents/: __init__.py  base.py  grounded.py  horse.py  llm_client.py  progress_predictor.py
src/lean_repl/: __init__.py  client.py  errors.py  state_manager.py
src/leandojo/: __init__.py  client.py
src/orchestrator/: __init__.py  dynamic_registry.py  leandojo_referee.py  repl_referee.py
src/retrieval/: __init__.py  ast_extractor.py  embeddings.py  index_builder.py  vector_store.py
tests/: conftest.py  test_game_flow.py  test_llm_client_factory.py  test_rulebook.py
